--- a/Ansible/jenkins_setup/tasks/jenkins_install.yml
+++ b/Ansible/jenkins_setup/tasks/jenkins_install.yml
@@ -50,7 +50,7 @@
     create: yes
      
 - name: Create .m2/repository
-  shell: sudo chmod -R 777 /var/lib/jenkins/.m2/repository/
+  shell: sudo mkdir /var/lib/jenkins/.m2/repository/
      
 - name: Change permissions .m2/repository
   shell: sudo chmod -R 777 /var/lib/jenkins/.m2/repository/
