known hosts mkdir

--- a/Ansible/jenkins_setup/tasks/jenkins_install.yml
+++ b/Ansible/jenkins_setup/tasks/jenkins_install.yml
@@ -54,4 +54,7 @@
      
 - name: Change permissions .m2/repository
   shell: sudo chmod -R 777 /var/lib/jenkins/.m2/repository/
+     
+- name: Create directory known_hosts
+  shell: sudo mkdir -p  ~/.ssh/known_hosts
       
