--- a/Ansible/Nexus/nexus-server/tasks/java_install.yml
+++ b/Ansible/Nexus/nexus-server/tasks/java_install.yml
@@ -1,8 +1,5 @@
 ---
 # tasks file for install the java
-- name: install java-openjdk17
+- name: install java-openjdk8
   shell:
-    sudo yum install java-11-amazon-corretto -y
-    sudo yum install java-11-amazon-corretto-devel -y
-    sudo yum install java-11-amazon-corretto-jmods -y
-    export JAVA_HOME=/usr/lib/jvm/java-11-amazon-corretto.x86_64
+    sudo yum install java-1.8.0-openjdk.x86_64 -y
