--- a/Ansible/Nexus/nexus-server/tasks/main.yml
+++ b/Ansible/Nexus/nexus-server/tasks/main.yml
@@ -1,28 +1,3 @@
 ---
 - include: java_install.yml
-
-- name: Nexus directory
-  shell: sudo mkdir /app
-
-- name: Download nexus tar
-  shell: sudo wget -O /app/nexus.tar.gz https://download.sonatype.com/nexus/3/latest-unix.tar.gz
-
-- name: Extract Nexus
-  shell: sudo tar -xvf /app/nexus.tar.gz
-
-- name: Move Nexus 
-  shell: sudo mv nexus-3* nexus
-
-- name: Create Nexus user and set ownership
-  file:
-    path: /app/nexus
-    owner: nexus
-    group: nexus
-    state: directory
-
-- name: Start Nexus service
-  systemd:
-    name: nexus
-    state: started
-    enabled: yes
-    daemon_reload: yes
+- include: nexus_install.yml
