--- a/Ansible/Sonar/sonarqube/vars/main.yml
+++ b/Ansible/Sonar/sonarqube/vars/main.yml
@@ -1,5 +1,5 @@
 # vars/main.yml
-sonarqube_version: "8.9.0.43852"    # Specify the desired SonarQube version
+sonarqube_version: "8.9.0.43852"    
 sonarqube_install_dir: "/opt/sonarqube"
-sonarqube_user: "sonarqube"
-sonarqube_group: "sonarqube"
+sonarqube_user: "sonarqube"         
+sonarqube_group: "sonarqube"        
