--- a/Ansible/Sonar/sonarqube/vars/main.yml
+++ b/Ansible/Sonar/sonarqube/vars/main.yml
@@ -1,5 +1,7 @@
 # vars/main.yml
 sonarqube_version: "8.9.0.43852"    
+sonarqube_download_url: "https://binaries.sonarsource.com/Distribution/sonarqube/sonarqube-{{ sonarqube_version }}.zip"
+sonarqube_download_dest: "/tmp/sonarqube-{{ sonarqube_version }}.zip"
 sonarqube_install_dir: "/opt/sonarqube"
 sonarqube_user: "sonarqube"         
-sonarqube_group: "sonarqube"        
+sonarqube_group: "sonarqube"     
