--- a/Ansible/Sonar/sonarqube/vars/main.yml
+++ b/Ansible/Sonar/sonarqube/vars/main.yml
@@ -5,3 +5,4 @@ sonarqube_download_dest: "/tmp/sonarqube-{{ sonarqube_version }}.zip"
 sonarqube_install_dir: "/opt/sonarqube"
 sonarqube_user: "sonarqube"         
 sonarqube_group: "sonarqube"     
+sonarqube_service_name: "sonarqube"
