--- a/Ansible/Sonar/playbook.yaml
+++ b/Ansible/Sonar/playbook.yaml
@@ -4,10 +4,6 @@
   become_method: sudo
   remote_user: ubuntu
   become: true
-  gather_facts: no
-  collections:
-    - community.general
-  tasks:
-    - name: Install SonarQube
-      community.general.sonarqube:
-        version: "8.9.1" 
+  gather_facts: yes
+  roles:
+    -sonarqube
