--- a/Ansible/Sonar/sonarqube/tasks/java_install.yml
+++ b/Ansible/Sonar/sonarqube/tasks/java_install.yml
@@ -1,8 +1,6 @@
 ---
 # tasks file for install the java
-- name: install java-openjdk11
-  shell:
-    sudo yum install java-11-amazon-corretto -y
-    sudo yum install java-11-amazon-corretto-devel -y
-    sudo yum install java-11-amazon-corretto-jmods -y
-    export JAVA_HOME=/usr/lib/jvm/java-11-amazon-corretto.x86_64
+- name: Install Java
+  yum:
+    name: java-1.8.0-openjdk
+    state: present
