--- a/Ansible/Sonar/sonarqube/tasks/java_install.yml
+++ b/Ansible/Sonar/sonarqube/tasks/java_install.yml
@@ -1,10 +1,8 @@
 ---
 # tasks file for install the java
-- name: Install JDK8
-  yum:
-    name: java-1.8.0-openjdk
-    state: present
-
 - name: Install JDK11
   shell:
     sudo yum install java-11-amazon-corretto -y
+    sudo yum install java-11-amazon-corretto-devel -y
+    sudo yum install java-11-amazon-corretto-jmods -y
+    export JAVA_HOME=/usr/lib/jvm/java-11-amazon-corretto.x86_64
