notifications on prd pipeline

--- a/Ansible/Sonar/sonarqube/templates/docker-compose.yml
+++ b/Ansible/Sonar/sonarqube/templates/docker-compose.yml
@@ -3,6 +3,7 @@ version: '2'
 services:
   sonarqube:
     image: sonarqube
+    restart: always
     ports:
       - "9000:9000"
     networks:
@@ -19,6 +20,7 @@ services:
       
   db:
     image: postgres
+    restart: always
     networks:
       - sonarnet
     environment:
