--- a/Ansible/JMeter/jmeter/tasks/jmeter_install.yml
+++ b/Ansible/JMeter/jmeter/tasks/jmeter_install.yml
@@ -2,12 +2,12 @@
 - name: Download Apache JMeter tarball
   get_url:
     url: "{{ jmeter_url }}"
-    dest: "{{ playbook_dir }}/roles/jmeter/files/{{ jmeter_package }}.tgz"
+    dest: "{{ playbook_dir }}/{{ jmeter_package }}.tgz"
 
 - name: Extract JMeter Archive
   become: yes
   unarchive:
-    src: "{{ playbook_dir }}/roles/jmeter/files/{{ jmeter_package }}.tgz"
+    src: "{{ playbook_dir }}/{{ jmeter_package }}.tgz"
     dest: /opt
     remote_src: yes
     creates: /opt/{{ jmeter_package }}
