--- a/Ansible/Jenkins/jenkins/vars/main.yml
+++ b/Ansible/Jenkins/jenkins/vars/main.yml
@@ -3,4 +3,6 @@ maven_url: "https://dlcdn.apache.org/maven/maven-3/3.9.4/binaries/apache-maven-3
 maven_package: apache-maven-3.9.4
 jenkins_Repo: "https://pkg.jenkins.io/redhat-stable/jenkins.repo"
 jenkins_key: "https://pkg.jenkins.io/redhat-stable/jenkins.io-2023.key"
-
+jenkins_home: "/var/lib/jenkins"
+jenkins_os_user: jenkins
+jenkins_os_group: jenkins
